43) All fs now mount with noatime option(speedup).<br>
44) rwfs now use bz2 instead gzip.<br>
45) samba3 fix permissions at systems without user named root.<br>
46) Cleanup some nvram defaults and move to romfs target.<br>
47) tune samba3 config for more compat with some MS-WIN apps used file based DB.<br>
48) Try fix regression in ext2 module.<br>
49) Add SmbTimeserver variable for support time server compatable with WinNT(SmbTimeserver variable 0/1 need add in WebUI, default 0).<br>
50) Tune kernel for file services as torrent/samba/etc.<br>
51) radvd up to 1.8.1 version.<br>
52) Add vpnTestReachable variable. Is vpnTestReachable=1 test VPN server reachable before connect (default 1, only pptp/l2tp, need add in WebUI).<br>
53) Fix /proc/cpuinfo SoC type detect. Detect 2880/3052(3050)/3883(3662)/3350/3352/6855 RT chips.<br>
54) If defined CONFIG_USB_STORAGE install optware-install.sh script to image.<br>
55) uClibc always use large file mode for fopen function (8mB usb devices).<br>
56) samba3 always use large file mode.<br>
57) SpeedUp generate new mac adresses.<br>
58) Remove upnp support from transmission. Save mem and cpu ticks.<br>
59) Add RemoteTelnet and RemoteFTP variable for disable/enable FTP/Telnet services (need add in webUI Miscellaneous default disabled).<br>
60) CONFIG_FDISK_SUPPORT_LARGE_DISKS set by default for USB devices.<br>
61) rewrite automount.sh, now correct mount ext*/fat/ntfs and swap particions.<br>
62) Support auto mount optware by label(for automount particion label need set to optware).<br>
63) FIx use file offset=64 in uClibc.<br>


<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>