@@ -1,5 +1,5 @@
 SHELL=/bin/bash
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
+PATH=/bin:/sbin:/usr/bin:/usr/sbin:/etc/scripts
 MAILTO=root
 HOME=/
 
