@@ -1,2 +1,2 @@
 ::sysinit:/etc/rc.d/start
-ttyS1::respawn:/bin/sh
+ttyS1::respawn:/bin/login
