@@ -34,5 +34,16 @@ export LC_MEASUREMENT=ru_RU.UTF-8
 export LC_IDENTIFICATION=ru_RU.UTF-8
 export LC_ALL=
 
+#variables for transmissions
+if [ -f /bin/transmission-daemon ]; then
+    torrent_home=`nvram_get 2860 torrent_home`
+    if [ "$torrent_home" != "" ]; then
+	export TRANSMISSION_HOME=$torrent_home
+	export TRANSMISSION_WEB_HOME=/share/transmission/web
+	export XDG_DATA_HOME=/share/transmission/web
+	export XDG_DATA_DIRS=/share/transmission/web
+    fi
+fi
+
 #aliases
 [ -x /usr/bin/vim ] && alias vi=vim || alias vim=vi
